syntax = "proto3";

package user_package;

message GetUserByEmailRequest {
  string email = 1;
}

message User {
  string id = 1;
  string name = 2;
  string email = 3;
  string password = 4;
}

service UserService {
    rpc GetUserByEmail(GetUserByEmailRequest) returns (User);
}